--- a/030 to 037 - Content Management System/server/package.json
+++ b/030 to 037 - Content Management System/server/package.json
@@ -10,15 +10,16 @@
     "body-parser": "^1.19.0",
     "chai": "^4.2.0",
     "chai-http": "^4.3.0",
-    "cookie-parser": "~1.4.4",
-    "debug": "~2.6.9",
-    "express": "~4.16.1",
+    "cookie-parser": "^1.4.4",
+    "cors": "^2.8.5",
+    "debug": "^4.1.1",
+    "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mocha": "^6.2.0",
     "moment": "^2.24.0",
-    "mongodb": "^3.3.0-beta2",
-    "mongoose": "^5.6.7",
-    "morgan": "~1.9.1",
+    "mongodb": "^3.3.1",
+    "mongoose": "^5.6.11",
+    "morgan": "^1.9.1",
     "oauth-1.0a": "^2.2.6"
   }
 }
